# Expression-Interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  n
src/: allocator.c  command.c  commands.c  container.c  conversions.c  defs.c  evaluator.c  hashmap.c  lexer.c  logger.c  main.c  parser.c  registry.c  utils.c
src/include/: allocator.h  commands.h  container.h  evaluator.h  hashmap.h  lexer.h  logger.h  parser.h  registry.h  utils.h
